2003-10-06  John Levon  <levon@movementarian.org>

	* utils/opcontrol: work around 2.6 daemon's signal
	handling race that could cause it to hang during
	a --shutdown

2003-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events:
	* events/i386/p4-ht/events: put GLOBAL_POWER_EVENTS on top

	* events/i386/pii/unit_masks:
	* events/i386/piii/unit_masks: typo in help string

	* utils/op_help.c: show "counter: all" instead an enumeration of all
	  counter

2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* events/*.events *.unit_masks: move these files to subdir named
	  arch/processor_name/events and arch/processor_name/unit_masks
	* events/Makefile.am: update according
	
	* libop/op_events.c: now it's safe to allow loading events file from a
	  directory provided through environment var OPROFILE_EVENTS_FILE_DIR
	* libop/tests/alloc_counter_tests.c: use it
	* libop/tests/load_events_files_tests.c: use it

2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: revert last commit (allowed to find events files
	  description directory in alternate directory)

	* libop/tests/Makefile.am:
	* libop/tests/load_events_files_tests.c: new files. Validate events
	  description file by loading them.

	* libutil/op_cpufreq.c: comment why we don't have any code handling
	  s390

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in:
	* libop/Makefile.am: new subdir
	* libop/op_events.c: allow to retrieve events file dir through
	  environment variable
	* utils/op_help.c: move parse_events() and parsed_event struct to ...
	* libop/op_parse_event.h:
	* libop/op_parse_event.c: these new files

	* libop/tests/Makefile.am: new tests subdir
	* libop/tests/alloc_counter_tests.c: events mapping to counter nr tests
	* libop/tests/parse_event_tests.c: event parsing tests

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: add forward declaration
	* libop/op_alloc_counter.c: alloc counter in increasing number order,